--- a/DevExpressGrid/App.xaml
+++ b/DevExpressGrid/App.xaml
@@ -3,6 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DevExpressGrid.App">
     <Application.Resources>
-
+        <Style TargetType="NavigationPage">
+            <Setter Property="BarBackgroundColor" Value="#2196F3"/>
+            <Setter Property="BarTextColor" Value="White" />
+        </Style>
     </Application.Resources>
 </Application>
