--- a/DevExpressGrid/ui/MainPage.xaml
+++ b/DevExpressGrid/ui/MainPage.xaml
@@ -17,23 +17,24 @@
             
             <Image 
                 Grid.Column="0"
-                Source="ic_facebook_logo"
+                Source="logo.png"
                 VerticalOptions="Center" 
                 HeightRequest="30"/>
             
             <Label Grid.Column="1" 
                    Text="{Binding PageTitle}" 
                    MaxLines="1" 
+                   FontAttributes="Bold"
                    HorizontalOptions="Start"
                    VerticalOptions="Center" 
                    TextColor="White" 
-                   FontSize="22"/>
+                   FontSize="24"/>
             
             <ImageButton
                 Grid.Column="2"
                 HorizontalOptions="Center" 
                 BackgroundColor="Transparent" 
-                Source="ic_add"
+                Source="add.png"
                 HeightRequest="24" 
                 Clicked="ImageButton_Clicked"/>
         
@@ -48,7 +49,7 @@
         
         <dxg:DataGridView x:Name="gridLayout"
              ItemsSource="{Binding EmployeeItems}"
-             Tap="gridLayout_Tap"
+             Tap="GridLayout_Tap"
              ColumnHeaderHeight="0">
 
             <dxg:DataGridView.EndSwipeItems>
@@ -77,7 +78,7 @@
             <dxg:TextColumn FieldName="FullName" 
                        Column="1"
                        FontAttributes="Bold"
-                       FontSize="Subtitle"
+                       FontSize="18"
                        FontColor="Black"
                        HorizontalContentAlignment="Start"/>
 
